--- a/notebooks/pysparkbasics/L01_PySpark_Intro/S03_RepartitionAndCoalesce.ipynb
+++ b/notebooks/pysparkbasics/L01_PySpark_Intro/S03_RepartitionAndCoalesce.ipynb
@@ -54,7 +54,7 @@
     "else:\n",
     "    spark = SparkSession.builder\\\n",
     "        .master(\"k8s://https://kubernetes.default.svc:443\")\\\n",
-    "        .appName(\"SparkStreamingComputerVision\")\\\n",
+    "        .appName(\"RepartitionAndCoalesce\")\\\n",
     "        .config(\"spark.kubernetes.container.image\", \"inseefrlab/jupyter-datascience:master\")\\\n",
     "        .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\", os.environ['KUBERNETES_SERVICE_ACCOUNT'])\\\n",
     "        .config(\"spark.executor.instances\", \"4\")\\\n",
