--- a/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowwFunctionBasics.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowwFunctionBasics.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -163,7 +162,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "                                                                                \r"
      ]
     }
@@ -856,9 +854,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 19:==================================================>    (91 + 3) / 100]\r",
-      "\r",
       "                                                                                \r"
      ]
     },
@@ -1356,7 +1351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1370,9 +1365,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
