add cube and rollup

--- a/notebooks/pysparkbasics/L02_DataFrame/S03_GroupByAndAggregation/01_GroupBy.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S03_GroupByAndAggregation/01_GroupBy.ipynb
@@ -257,12 +257,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------------------------+\n",
+      "|department|collect_list(employee_name)|\n",
+      "+----------+---------------------------+\n",
+      "|Sales     |[James, Michael, Robert]   |\n",
+      "|Finance   |[Maria, Raman, Scott, Jen] |\n",
+      "|Marketing |[Jeff, Kumar]              |\n",
+      "+----------+---------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"department\").agg(f.collect_list(\"employee_name\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  3.1.4 Cube\n",
+    "\n",
+    "CUBE \n",
+    "We have seen in a GROUP BY, every row is included only once in its corresponding summary.\n",
+    "\n",
+    "With GROUP BY CUBE(..) every row is included in summary of each combination of levels it represents, wildcards included. Logically, the shown above is equivalent to something like this (assuming we could use NULL placeholders):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----+\n",
+      "|department|count|\n",
+      "+----------+-----+\n",
+      "|      null|    9|\n",
+      "| Marketing|    2|\n",
+      "|     Sales|    3|\n",
+      "|   Finance|    4|\n",
+      "+----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check the difference with groupBy(\"department\")\n",
+    "# as we cube only one column, so the possible combination is 3, plus wildcards. So we have 4 rows in total. \n",
+    "# The wildcards represnet the all departments\n",
+    "\n",
+    "df.cube(\"department\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total row count: 12\n",
+      "+----------+-----+-----+\n",
+      "|department|state|count|\n",
+      "+----------+-----+-----+\n",
+      "|   Finance| null|    4|\n",
+      "| Marketing| null|    2|\n",
+      "|   Finance|   CA|    2|\n",
+      "|   Finance|   NY|    2|\n",
+      "|     Sales|   CA|    1|\n",
+      "|     Sales|   NY|    2|\n",
+      "|      null| null|    9|\n",
+      "|      null|   NY|    5|\n",
+      "| Marketing|   CA|    1|\n",
+      "|      null|   CA|    4|\n",
+      "| Marketing|   NY|    1|\n",
+      "|     Sales| null|    3|\n",
+      "+----------+-----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we cube two columns department(3 distinc value + wildcard),state(2 distinc value + wildcard), we should have 4*3 (12) row in total  \n",
+    "df1=df.cube(\"department\",\"state\").count()\n",
+    "print(f\"Total row count: {df1.count()}\")\n",
+    "# (Finance null) means Finance department of all state. \n",
+    "# (null   NY) means all department of NY state\n",
+    "#(null null) means all department and all state\n",
+    "df1.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  3.1.5 Rollup\n",
+    "rollup computes hierarchical subtotals from left to right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total row count 10\n",
+      "+----------+-----+-----+\n",
+      "|department|state|count|\n",
+      "+----------+-----+-----+\n",
+      "|   Finance| null|    4|\n",
+      "| Marketing| null|    2|\n",
+      "|   Finance|   CA|    2|\n",
+      "|   Finance|   NY|    2|\n",
+      "|     Sales|   CA|    1|\n",
+      "|     Sales|   NY|    2|\n",
+      "|      null| null|    9|\n",
+      "| Marketing|   CA|    1|\n",
+      "| Marketing|   NY|    1|\n",
+      "|     Sales| null|    3|\n",
+      "+----------+-----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We rollup(\"department\",\"state\"). The first column department has 3 distinct value, \n",
+    "# the seconde column department has 2 distinct value. For the second column, we need to add wildcard\n",
+    "# so we have 3*3+global wildcart=10 rows in the rollup result.\n",
+    "# Similar to cube, \n",
+    "# (Finance null) means Finance department of all state. \n",
+    "#(null null) means all department and all state\n",
+    "\n",
+    "# You can notice we don't have rows like  (null   NY) anymore. Because the order plays\n",
+    "df2=df.rollup(\"department\", \"state\").count()\n",
+    "print(f\"Total row count {df2.count()}\")\n",
+    "df2.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.groupBy(\"department\").agg(f.collect_list())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
