add aggregation function

--- a/notebooks/pysparkbasics/L02_DataFrame/S03_GroupByAndAggregation/01_GroupBy.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S03_GroupByAndAggregation/01_GroupBy.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -402,9 +402,10 @@
     "# so we have 3*3+global wildcart=10 rows in the rollup result.\n",
     "# Similar to cube, \n",
     "# (Finance null) means Finance department of all state. \n",
-    "#(null null) means all department and all state\n",
+    "# (null null) means all department and all state\n",
     "\n",
-    "# You can notice we don't have rows like  (null   NY) anymore. Because the order plays\n",
+    "# You can notice we don't have rows like  (null   NY) anymore. Because the order of input columns play as hierarchy.\n",
+    "\n",
     "df2=df.rollup(\"department\", \"state\").count()\n",
     "print(f\"Total row count {df2.count()}\")\n",
     "df2.show()"
