finish agg function for notebook

--- a/notebooks/pysparkbasics/L02_DataFrame/S03_GroupByAndAggregation/02_AggregationFunc.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S03_GroupByAndAggregation/02_AggregationFunc.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,6 +418,461 @@
     "# show collect_set example\n",
     "# note we dont have duplicates\n",
     "df.select(collect_set(\"salary\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.4 Groupings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.groupBy(\"department\").avg(\"salary\")\n",
+    "df1.show()\n",
+    "# can't make grouping works \n",
+    "# df1.select(grouping(\"avg(salary)\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.5 \n",
+    "\n",
+    "- first(colName): it returns the first element of a group in a column. When ignoreNulls is set to true, it returns the first non-null element.\n",
+    "- last(colName): it returns the last element of a group in a column. When ignoreNulls is set to true, it returns the last non-null element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+----------+\n",
+      "|first(salary)|last(name)|\n",
+      "+-------------+----------+\n",
+      "|         3000|      Haha|\n",
+      "+-------------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the first and last of all rows\n",
+    "df.select(first(\"salary\"),last(\"name\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+----------+\n",
+      "|department|first(salary)|last(name)|\n",
+      "+----------+-------------+----------+\n",
+      "|     Sales|         3000|      Haha|\n",
+      "|   Finance|         3000|       Jen|\n",
+      "| Marketing|         3000|     Kumar|\n",
+      "|        IT|         4100|      Haha|\n",
+      "+----------+-------------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the first, last of each sub group\n",
+    "df.groupBy(\"department\").agg(first(\"salary\"),last(\"name\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.6 sum and sumDistinct\n",
+    "- sum(colName): returns the sum of all values in a column.\n",
+    "- sumDistinct(colName): returns the sum of all distinct values in a column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------------+\n",
+      "|salary_sum|salary_distinct_sum|\n",
+      "+----------+-------------------+\n",
+      "|     34000|              20900|\n",
+      "+----------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the sum and sumDistinct of each group\n",
+    "df.select(sum(\"salary\").alias(\"salary_sum\"),sumDistinct(\"salary\").alias(\"salary_distinct_sum\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------------------+----------+-------------------+\n",
+      "|department|collect_list(salary)|salary_sum|salary_distinct_sum|\n",
+      "+----------+--------------------+----------+-------------------+\n",
+      "|     Sales|  [4600, 4100, 3000]|     11700|              11700|\n",
+      "|   Finance|  [3900, 3000, 3300]|     10200|              10200|\n",
+      "| Marketing|        [2000, 3000]|      5000|               5000|\n",
+      "|        IT|        [3000, 4100]|      7100|               7100|\n",
+      "+----------+--------------------+----------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"department\").agg(collect_list(\"salary\"),sum(\"salary\").alias(\"salary_sum\"),sumDistinct(\"salary\").alias(\"salary_distinct_sum\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.7 skewness, kurtosis\n",
+    "\n",
+    "When we do descriptive analysis, we want to know the skewness of a distribution. If a distribution is not skewed, which\n",
+    "is a normal distribution, then we want to know the Kurtosis(峰度) of the distribution.\n",
+    "\n",
+    "Central tendency\n",
+    "This is nothing but Mean, its the average value of a distribution. to calculate the central tendency we can use Imputer or Spark SQL's stats function.\n",
+    "\n",
+    "Dispersion\n",
+    "This Nothing but Variance,Is a measure that how far the data set is spread out, So calculate the Central tendency and dispersion refer this tutorial.\n",
+    "\n",
+    "- skewness(colName): Skewness is a measure of symmetry, or more precisely, the lack of symmetry. A distribution, or data set, is symmetric \n",
+    "if it looks the same to the left and right of the centre point. \n",
+    "\n",
+    "- kurtosis(colName): Kurtosis measures whether your dataset is heavy-tailed or light-tailed compared to a normal distribution. \n",
+    "Data sets with high kurtosis have heavy tails and more outliers and data sets with low kurtosis tend to have \n",
+    "light tails and fewer outliers.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-------------------+\n",
+      "|    skewness(salary)|   kurtosis(salary)|\n",
+      "+--------------------+-------------------+\n",
+      "|-0.12041791181069564|-0.6467803030303032|\n",
+      "+--------------------+-------------------+\n",
+      "\n",
+      "+----------+--------------------+-------------------+----------------+\n",
+      "|department|collect_list(salary)|   skewness(salary)|kurtosis(salary)|\n",
+      "+----------+--------------------+-------------------+----------------+\n",
+      "|     Sales|  [3000, 4600, 4100]|-0.4220804429649461|            -1.5|\n",
+      "|   Finance|  [3000, 3300, 3900]|0.38180177416060623|            -1.5|\n",
+      "| Marketing|        [3000, 2000]|                0.0|            -2.0|\n",
+      "|        IT|        [4100, 3000]|                0.0|            -2.0|\n",
+      "+----------+--------------------+-------------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if the skew value is positive, it means, the distribution is skew to the right \n",
+    "df.select(skewness(\"salary\"), kurtosis(\"salary\")).show()\n",
+    "df.groupBy(\"department\").agg(collect_list(\"salary\"), skewness(\"salary\"),kurtosis(\"salary\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----+\n",
+      "|col1|col2|\n",
+      "+----+----+\n",
+      "|  20| 100|\n",
+      "|  50| 100|\n",
+      "| 100| 100|\n",
+      "| 100| 100|\n",
+      "| 100| 100|\n",
+      "| 100| 100|\n",
+      "| 100| 150|\n",
+      "| 100| 180|\n",
+      "+----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Below example, col1 is skew to the left, col2 is skew to right\n",
+    "data2 = [(20,100),(50,100),(100,100),(100,100),(100,100),(100,100),(100, 150),(100,180)]\n",
+    "df_skew= spark.createDataFrame(data=data2, schema=[\"col1\",\"col2\"])\n",
+    "df_skew.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-------------------+\n",
+      "|     skewness(col1)|     kurtosis(col1)|\n",
+      "+-------------------+-------------------+\n",
+      "|-1.3746740084540479|0.16603074794216655|\n",
+      "+-------------------+-------------------+\n",
+      "\n",
+      "+------------------+-----------------+\n",
+      "|    skewness(col2)|   kurtosis(col2)|\n",
+      "+------------------+-----------------+\n",
+      "|1.3746740084540479|0.166030747942167|\n",
+      "+------------------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# col1 skew to the left, returns negative skewness value\n",
+    "df_skew.select(skewness(\"col1\"), kurtosis(\"col1\")).show()\n",
+    "\n",
+    "# col2 skew to the right, returns positive skewness value\n",
+    "df_skew.select(skewness(\"col2\"), kurtosis(\"col2\")).show()\n",
+    "\n",
+    "# you can notice they have the same kurtorsis value, it means the distance between tail and median is the same. They are both not heavy "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----+\n",
+      "|col1|col2|\n",
+      "+----+----+\n",
+      "| 100| 100|\n",
+      "| 100| 100|\n",
+      "| 100| 110|\n",
+      "| 100| 120|\n",
+      "| 100| 130|\n",
+      "| 100| 140|\n",
+      "| 100| 150|\n",
+      "| 110| 180|\n",
+      "+----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data3 = [(100,100),(100,100),(100,110),(100,120),(100,130),(100,140),(100, 150),(110,180)]\n",
+    "df_kurt= spark.createDataFrame(data=data3, schema=[\"col1\",\"col2\"])\n",
+    "df_kurt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+------------------+\n",
+      "|    skewness(col1)|    kurtosis(col1)|\n",
+      "+------------------+------------------+\n",
+      "|2.2677868380553634|3.1428571428571432|\n",
+      "+------------------+------------------+\n",
+      "\n",
+      "+------------------+-------------------+\n",
+      "|    skewness(col2)|     kurtosis(col2)|\n",
+      "+------------------+-------------------+\n",
+      "|0.6682892518272334|-0.5349496168871446|\n",
+      "+------------------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# col1 skew to the right, returns positive skewness value, is not heavily tailed, so kurt is positive\n",
+    "df_kurt.select(skewness(\"col1\"), kurtosis(\"col1\")).show()\n",
+    "\n",
+    "# col2 skew to the right, returns positive skewness value. is heavily tailed, so kurt is negative\n",
+    "df_kurt.select(skewness(\"col2\"), kurtosis(\"col2\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.8 Standard deviation\n",
+    "\n",
+    "Standard deviation is a measure of the amount of variation or dispersion of a set of values.\n",
+    "- A low standard deviation indicates that the values tend to be close to the mean (also called the expected value) \n",
+    "     of the set\n",
+    "- A high standard deviation indicates that the values are spread out over a wider range.\n",
+    "\n",
+    "Spark provides three methods:\n",
+    "- stddev(): alias for stddev_samp.\n",
+    "- stddev_samp(): returns the unbiased sample standard deviation of the expression in a group.\n",
+    "- stddev_pop(): returns population standard deviation of the expression in a group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-------------------+------------------+\n",
+      "|stddev_samp(salary)|stddev_samp(salary)|stddev_pop(salary)|\n",
+      "+-------------------+-------------------+------------------+\n",
+      "|  765.9416862050705|  765.9416862050705|  726.636084983398|\n",
+      "+-------------------+-------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(stddev(\"salary\"), stddev_samp(\"salary\"), stddev_pop(\"salary\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------------------+-------------------+------------------+\n",
+      "|department|collect_list(salary)|stddev_samp(salary)|stddev_pop(salary)|\n",
+      "+----------+--------------------+-------------------+------------------+\n",
+      "|     Sales|  [3000, 4600, 4100]|   818.535277187245| 668.3312551921141|\n",
+      "|   Finance|  [3000, 3300, 3900]|   458.257569495584|374.16573867739413|\n",
+      "| Marketing|        [3000, 2000]|  707.1067811865476|             500.0|\n",
+      "|        IT|        [4100, 3000]|  777.8174593052023|             550.0|\n",
+      "+----------+--------------------+-------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"department\").agg(collect_list(\"salary\"), stddev(\"salary\"),stddev_pop(\"salary\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.9 Variance\n",
+    "\n",
+    "Variance is also a measure of the amount of variation or dispersion of a set of values. The difference with standard\n",
+    "deviation is that square functions are used during the calculation because they weight outliers more heavily than \n",
+    "points that are near to the mean. This prevents that differences above the mean neutralize those below the mean.\n",
+    "\n",
+    "But the square function makes the Variance change the unit of measurement of the original data. For example, a column\n",
+    "contains centimeter values. Your variance would be in squared centimeters and therefore not the best measurement. \n",
+    "\n",
+    "Spark provides three methods:\n",
+    "- variance(): alias for var_samp.\n",
+    "- var_samp(): returns the unbiased sample variance of the values in a group.\n",
+    "- var_pop(): returns the population variance of the values in a group. \n",
+    "\n",
+    "High variance value means data are spreaded to a wider range.\n",
+    "Low variance value means data are close to mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+-----------------+---------------+\n",
+      "| var_samp(salary)| var_samp(salary)|var_pop(salary)|\n",
+      "+-----------------+-----------------+---------------+\n",
+      "|586666.6666666666|586666.6666666666|       528000.0|\n",
+      "+-----------------+-----------------+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df.select(variance(\"salary\"), var_samp(\"salary\"), var_pop(\"salary\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------------------+----------------+-----------------+\n",
+      "|department|collect_list(salary)|var_samp(salary)|  var_pop(salary)|\n",
+      "+----------+--------------------+----------------+-----------------+\n",
+      "|     Sales|  [3000, 4600, 4100]|        670000.0|446666.6666666667|\n",
+      "|   Finance|  [3000, 3300, 3900]|        210000.0|         140000.0|\n",
+      "| Marketing|        [3000, 2000]|        500000.0|         250000.0|\n",
+      "|        IT|        [4100, 3000]|        605000.0|         302500.0|\n",
+      "+----------+--------------------+----------------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"department\").agg(collect_list(\"salary\"), variance(\"salary\"),var_pop(\"salary\")).show()"
    ]
   },
   {
