add null value handling example

--- a/notebooks/pysparkbasics/L02_DataFrame/S06_DataCleaning/01_RemoveDuplicates.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S06_DataCleaning/01_RemoveDuplicates.ipynb
@@ -383,12 +383,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Compare to distinct(), drop_duplicates can keep all columns when removing duplicates based on certain columns. "
+    "Compare to distinct(), drop_duplicates can keep all columns when removing duplicates based on certain columns. It's more interesting. "
    ]
   }
  ],
