correct dropDuplicates function name

--- a/notebooks/pysparkbasics/L02_DataFrame/S06_DataCleaning/01_RemoveDuplicates.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S06_DataCleaning/01_RemoveDuplicates.ipynb
@@ -10,8 +10,9 @@
     "\n",
     "- distinct(): Returns a new DataFrame containing the distinct rows in this DataFrame. It takes no arg and return a \n",
     "              new data frame\n",
-    "- removeDuplicates(*colName): is used to drop rows based on selected (one or multiple) columns. It takes an array of\n",
-    "      column names and return a new data frame."
+    "- dropDuplicates(*colName): is used to drop rows based on selected (one or multiple) columns. It takes an array of\n",
+    "      column names and return a new data frame.\n",
+    "- drop_duplicates(*colName):is a wraper of dropDuplicates()"
    ]
   },
   {
