add some comments

--- a/notebooks/pysparkbasics/L02_DataFrame/S05_JoinOnUnion/5.3_UnionOfDataframe.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S05_JoinOnUnion/5.3_UnionOfDataframe.ipynb
@@ -655,6 +655,7 @@
     "union1_df = df_msg_after_fill.union(df_mail_after_fill)\n",
     "union1_df.show()\n",
     "\n",
+    "# You can notice the unionByName merges the msg column of the two dataframe even thought the position are different.\n",
     "union2_df = df_msg_after_fill.unionByName(df_mail_after_fill)\n",
     "union2_df.show()"
    ]
